{
    "name": "carInputs",
    "maps": [
        {
            "name": "carAction",
            "id": "d0e29681-3071-440b-b9a8-e57cbfaab2d8",
            "actions": [
                {
                    "name": "moveH",
                    "type": "PassThrough",
                    "id": "cf26ad67-3c17-46da-b059-a5fa749e3b59",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "moveV",
                    "type": "Button",
                    "id": "47f7ebdb-f761-49ec-bec2-e73de38d5330",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "brake",
                    "type": "Button",
                    "id": "574b4719-547c-452e-a5c4-936e1e9eaad7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "horizontal",
                    "id": "27c57255-1364-439d-bc03-2ffaf17684e3",
                    "path": "1DAxis",
                    "interactions": "Press",
                    "processors": "Clamp(min=-2,max=2)",
                    "groups": "",
                    "action": "moveH",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "b3a06630-26e9-47c7-b349-1faadbc91118",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Negative",
                    "id": "255303a9-4cb5-45ff-bec2-65e400ec104f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "8938f0d9-2869-4a20-b70b-43b97fc061d6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "a67096d0-28b4-4189-84fa-7a02c3d0c882",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "vertical",
                    "id": "b82acc53-5620-4a87-bbd7-993a693edfea",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveV",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6b6861e5-0afd-4eac-bf1e-b1283d8df1a6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "35a662b2-2120-4a33-94fb-6b10c6371cad",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c9017e01-a7df-4e25-ac3b-47912787e978",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "jump",
                    "id": "e2473e23-d0a2-4d81-868d-c25a09f69c64",
                    "path": "1DAxis(minValue=0)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "brake",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "aae99b0e-8e1b-44dc-b6b9-61b861e73c33",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "brake",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "681fb416-648f-4479-965c-6f3b7a1319e0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "brake",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d70d98fc-bec9-48d9-83be-a59be8c1a193",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "brake",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}